# mighty-protocol

./: .dockerignore  .gitignore  .gitmodules  PROTOCOL.md  README.md  package.json  pyproject.toml
.github/workflows/: tests.yml
cpp/: mighty_protocol.h  mighty_protocol_consumer.h  mighty_sdk.h
cpp/sdk/: mighty_client.h  mighty_device_io.h  mighty_web_device.h
docs/: api-reference.mdx  calibration.mdx  examples.mdx  index.mdx  lua.mdx  meta.json  multi-camera.mdx  pose.mdx  protocol.mdx  recording.mdx  start.mdx  updating-firmware.mdx
docs/quickstart/: cpp.mdx  javascript.mdx  meta.json  python.mdx
docs/sdk/: api-reference.mdx  examples.mdx  index.mdx  meta.json  pose.mdx  protocol.mdx  recipes.mdx  troubleshooting.mdx
docs/sdk/quickstart/: cpp.mdx  javascript.mdx  meta.json  python.mdx  ros2.mdx
examples/: debugger.py
examples/cpp/: CMakeLists.txt  README.md  main.cpp
examples/cpp/cli/: CMakeLists.txt  README.md  main.cpp
examples/cpp/dashboard/: CMakeLists.txt  README.md  main.cpp
examples/cpp/loopclosure_sdk/: main.cpp
examples/cpp/mapper-example/: CMakeLists.txt  README.md  main.cpp
examples/cpp/mapper_sdk/: main.cpp
examples/cpp/wip/loopclosure_sdk/: main.cpp  utils.h
examples/cpp/wip/mapper-example/: CMakeLists.txt  README.md  main.cpp  replay.cpp
examples/node/: loopclosure_wasm.mjs  mapper_capture.mjs  mapper_replay_wasm.mjs
examples/python/: README.md  mightyapp.py  uihelpers.py
examples/python/loopclosure_sdk/: main.py
examples/python/multi_camera_apriltag/: README.md  bag_playback.py  main.py  recording.py  requirements.txt  state.py  stream.py  viewer.py
examples/python/synced_stereo/: README.md  bag_playback.py  depth.py  main.py  recording.py  requirements.txt  state.py  stereo-mount.stl  stream.py  utils.py  viewer.py
examples/ros2/: Dockerfile  README.md
examples/ros2/mighty_ros2/: package.xml  setup.cfg  setup.py
examples/ros2/mighty_ros2/launch/: mighty_ros2.launch.py
examples/ros2/mighty_ros2/mighty_ros2/: publisher.py
examples/web/: README.md  index.html  loopclosure.html  loopclosure.js  main.js  mapper-worker.js  mapper.css  mapper.html  mapper.js  package-lock.json  package.json  uihelpers.js  vite.config.js
examples/web/dashboard/: index.html  main.js
examples/web/loopclosure/: index.html  loopclosure.css
examples/web/mapper/: index.html  mapper-worker.js
examples/web/shared/: style.css
js/: index.js
js/core/: index.js  protocol.js
js/sdk/: client.js  device-web.js  image.js  index.js  loopclosure-wasm.js  utils.js
python/: decoded_dispatcher.py  dispatcher.py  mighty_protocol.py
python/mighty_sdk/: __init__.py  client.py  loopclosure.py  utils.py  web_device.py
scripts/: rebuild_loopclosure_sdk.sh
tests/: cpp_pose_contract_test.cpp  cpp_pose_viz_map.cpp  cpp_roundtrip.cpp  cpp_sdk_integration_test.cpp  cpp_sdk_test.cpp  cross_client_pose_parity_test.py  docs_conformance_test.py  node_pose_contract.test.js  node_pose_viz_map.js  node_roundtrip.test.js  node_sdk.test.js  pose_viz_cases.json  python_consumer_test.py  python_pose_contract_test.py  python_pose_viz_map.py  python_sdk_integration_test.py  python_sdk_test.py  run_tests.sh
